--- a/.htaccess
+++ b/.htaccess
@@ -12,9 +12,9 @@ RewriteRule  ^([a-zA-z]{2})\/searchTag/(.*)$   index.php?module=NewsSearch&page=
 RewriteRule  ^([a-zA-z]{2})\/search/?(.*)   index.php?$2&module=NewsSearch&page=search&lang=$1 [QSA]
 
 #Newspage
-RewriteRule  ^([a-zA-Z]{2})\/news/([0-9]+)\/([0-9]+)\/(.*)$   index.php?module=Newspage&page=news&lang=$1&nid=$2&npage=$3 [NC]
-RewriteRule  ^([a-zA-z]{2})\/submitnews$   index.php?module=Newspage&page=submitnews&lang=$1 [NC]
-RewriteRule  ^([a-zA-z]{2})\/sec.*/(.*)$   index.php?module=Newspage&page=section&lang=$1&section=$2 [NC]
+RewriteRule  ^([a-zA-Z]{2})\/news/([0-9]+)\/([0-9]+)\/(.*)$   index.php?module=News&page=news&lang=$1&nid=$2&npage=$3 [NC]
+RewriteRule  ^([a-zA-z]{2})\/submitnews$   index.php?module=News&page=submitnews&lang=$1 [NC]
+RewriteRule  ^([a-zA-z]{2})\/sec.*/(.*)$   index.php?module=News&page=section&lang=$1&section=$2 [NC]
 
 #SMBasic
 RewriteRule  ^([a-zA-z]{2})\/login?(.*)$   index.php?$2module=SMBasic&page=login&lang=$1 [QSA]
