--- a/.htaccess
+++ b/.htaccess
@@ -13,7 +13,7 @@ RewriteRule  ^([a-zA-z]{2})\/search/?(.*)   index.php?$2&module=NewsSearch&page=
 
 #Newspage
 RewriteRule  ^([a-zA-Z]{2})\/news/([0-9]+)\/([0-9]+)\/(.*)$   index.php?module=News&page=news&lang=$1&nid=$2&npage=$3 [NC]
-RewriteRule  ^([a-zA-z]{2})\/submitnews$   index.php?module=News&page=submitnews&lang=$1 [NC]
+RewriteRule  ^([a-zA-z]{2})\/submit_news$   index.php?module=News&page=submit_news&lang=$1 [NC]
 RewriteRule  ^([a-zA-z]{2})\/sec.*/(.*)$   index.php?module=News&page=section&lang=$1&section=$2 [NC]
 
 #SMBasic
