--- a/.htaccess
+++ b/.htaccess
@@ -14,7 +14,7 @@ RewriteRule  ^([a-zA-z]{2})\/search/?(.*)   index.php?$2&module=NewsSearch&page=
 #News
 RewriteRule  ^([a-zA-Z]{2})\/news/([0-9]+)\/([0-9]+)\/(.*)$   index.php?module=News&page=view_news&lang=$1&nid=$2&npage=$3 [NC]
 RewriteRule  ^([a-zA-z]{2})\/submit_news$   index.php?module=News&page=submit_news&lang=$1 [NC]
-RewriteRule  ^([a-zA-z]{2})\/section/(.*)$   index.php?module=News&page=section&lang=$1&section=$2 [NC]
+RewriteRule  ^([a-zA-z]{2})\/section/(.*)$   index.php?module=News&vpage=section&lang=$1&section=$2 [NC]
 
 #SMBasic
 RewriteRule  ^([a-zA-z]{2})\/login?(.*)$   index.php?$2&module=SMBasic&page=login&lang=$1 [QSA]
