--- a/.htaccess
+++ b/.htaccess
@@ -12,7 +12,7 @@ RewriteRule  ^([a-zA-z]{2})\/searchTag/(.*)$   index.php?module=NewsSearch&page=
 RewriteRule  ^([a-zA-z]{2})\/search/?(.*)   index.php?$2&module=NewsSearch&page=search&lang=$1 [QSA]
 
 #News
-RewriteRule  ^([a-zA-Z]{2})\/news/([0-9]+)\/([0-9]+)\/(.*)$   index.php?module=News&page=view_news&lang=$1&nid=$2&npage=$3 [NC]
+RewriteRule  ^([a-zA-Z]{2})\/news/([0-9]+)\/([0-9]+)\/([0-9]+)\/(.*)$   index.php?module=News&page=view_news&lang=$1&nid=$2&npage=$3&news_lang_id=$4 [NC]
 RewriteRule  ^([a-zA-z]{2})\/submit_news$   index.php?module=News&page=submit_news&lang=$1 [NC]
 RewriteRule  ^([a-zA-z]{2})\/section/(.*)$   index.php?module=News&page=section&lang=$1&section=$2 [NC]
 
